--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -144,7 +144,7 @@ post_class: post-template
 ================================================== -->
 {% if page.comments != false %}
     <div class="container">
-        <div id="comments" class="row justify-content-center mb-5">
+        <div id="comments" class="row justify-content-center mb-5" style="display: none">
             <div class="col-md-8">
                 {% include disqus.html %}
             </div>
