--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -777,7 +777,7 @@ iframe {
     padding: 0;
     height: 350px;
     border-radius: 0;
-    background-image: url(../images/blog/footer.png);
+    background-image: url(../images/blog/footer.jpg);
     background-size: cover;
   }
 
@@ -795,7 +795,7 @@ iframe {
   margin-top: 3rem;
   padding: 0;
   border-radius: 0;
-  background-image: url(../images/blog/footer.png);
+  background-image: url(../images/blog/footer.jpg);
   background-size: cover;
 }
 
