--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -14,7 +14,7 @@ layout: default
 
     {% if page.comments == true %}
 
-    <div id="comments" class="row mb-5">
+    <div id="comments" class="row mb-5" style="display: none;">
         <div class="col-md-8">
             {% include disqus.html %}
         </div>
